bugfix: fix scroll bar flickering bugfix: scrollable splash screen

--- a/src/ui/nehubaContainer/nehubaContainer.style.css
+++ b/src/ui/nehubaContainer/nehubaContainer.style.css
@@ -3,8 +3,6 @@
   width:100%;
   height:100%;
   position:relative;
-  /* n.b. needed for scrolling splash screen */
-  overflow: auto;
 }
 
 
